--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           >
           and is
           <a
-            href="https://github.com/nataliav30?tab=repositories"
+            href="https://github.com/nataliav30/Weather-app"
             target="_blank"
           >
             on GitHub</a
